# mkdocs-material-i18n

./: LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/instructions/: generate.instructions.md
docs/en/: api.md  guide.md  index.md
docs/zh/: docs.md  guide.md  index.md
mkdocs_material_i18n/: __init__.py  config.py  index.py  language.py  locale_mapper.py  navigation.py  plugin.py
tests/: mkdocs.yml  test.py  test_config_basic.py  test_config_default_locale.py  test_config_locales.py  test_index.py
