[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "mkdocs-material-i18n"
version = "1.0.0"
authors = [
    {name = "hxwu", email = "abwuge@163.com"},
]
description = "Enhances internationalization (i18n) support for MkDocs Material."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Framework :: MkDocs",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
dependencies = [
    "mkdocs-material>=9.6.14",
]

[project.urls]
Homepage = "https://github.com/abwuge/mkdocs-material-i18n"
Issues = "https://github.com/abwuge/mkdocs-material-i18n/issues"

[project.entry-points."mkdocs.plugins"]
i18n = "mkdocs_material_i18n.plugin:MaterialI18nPlugin"

[tool.pdm]
distribution = true

[tool.pdm.scripts]
test = {call = "tests.test:run_test"}
serve = "mkdocs serve"

[dependency-groups]
dev = [
    "pytest",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["-v", "--tb=short"]
